[gd_scene load_steps=14 format=3 uid="uid://3k3mwsvf3v2i"]

[ext_resource type="Texture2D" uid="uid://dqcnoj6f87ado" path="res://Assets/Sprites/dialogue_box.png" id="1_iwrom"]
[ext_resource type="Script" path="res://Scripts/dialogue_box.gd" id="1_ixgok"]
[ext_resource type="Texture2D" uid="uid://7eurh5nehjw4" path="res://Assets/Sprites/dialogue-scroll.png" id="2_1r0sp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w48js"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lu53i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_efnq7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bv1al"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7hr5o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3qwxg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_376gk"]
atlas = ExtResource("2_1r0sp")
region = Rect2(0, 0, 7, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_04q3b"]
atlas = ExtResource("2_1r0sp")
region = Rect2(7, 0, 7, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gibr"]
atlas = ExtResource("2_1r0sp")
region = Rect2(14, 0, 7, 3)

[sub_resource type="SpriteFrames" id="SpriteFrames_b2ac7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_376gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04q3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gibr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="DialogueBox" type="CanvasLayer"]
layer = 128
script = ExtResource("1_ixgok")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxSprite" type="Sprite2D" parent="Control"]
texture_filter = 1
position = Vector2(576.125, 479.5)
scale = Vector2(6.9803, 6.01786)
texture = ExtResource("1_iwrom")

[node name="NamePanel" type="Panel" parent="Control"]
layout_mode = 0
offset_top = 328.0
offset_right = 481.0
offset_bottom = 401.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_w48js")

[node name="Name" type="Label" parent="Control/NamePanel"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.164
anchor_right = 0.942
anchor_bottom = 0.918
offset_left = 0.139999
offset_top = 0.0279999
offset_right = -0.10202
offset_bottom = -0.0139999
theme_override_colors/font_color = Color(0.129412, 0.145098, 0.160784, 1)
theme_override_font_sizes/font_size = 40
text = "Sample Name"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DialoguePanel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.619
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -0.112
offset_bottom = 6.10352e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_lu53i")
metadata/_edit_use_anchors_ = true

[node name="Dialogue" type="Label" parent="Control/DialoguePanel"]
modulate = Color(0.129412, 0.145098, 0.160784, 1)
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.035
anchor_top = 0.138
anchor_right = 0.964
anchor_bottom = 0.412607
offset_left = -1.285
offset_top = -0.0860023
offset_right = 0.435913
offset_bottom = 0.0859833
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
text = "Test Dialogue goes here. Dialogue will look like this."

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
visible = false
layout_mode = 0
offset_left = 41.0
offset_top = 495.0
offset_right = 222.0
offset_bottom = 613.0

[node name="Option1" type="Button" parent="Control/VBoxContainer"]
visible = false
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.129412, 0.145098, 0.160784, 1)
theme_override_colors/font_hover_color = Color(0, 0, 1, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = SubResource("StyleBoxEmpty_efnq7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bv1al")
text = "Yes"
alignment = 0

[node name="Option2" type="Button" parent="Control/VBoxContainer"]
visible = false
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.129412, 0.145098, 0.160784, 1)
theme_override_colors/font_hover_color = Color(0, 0, 1, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = SubResource("StyleBoxEmpty_7hr5o")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3qwxg")
text = "No"
alignment = 0

[node name="ScrollIcon" type="AnimatedSprite2D" parent="Control"]
visible = false
texture_filter = 1
position = Vector2(1088, 605)
scale = Vector2(6.9803, 6.01786)
sprite_frames = SubResource("SpriteFrames_b2ac7")
frame = 2
frame_progress = 0.341215

[connection signal="pressed" from="Control/VBoxContainer/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Option2" to="." method="_on_option_2_pressed"]
